<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoActivity"
    tools:context=".LoginScreen">

    <ImageView
        android:id="@+id/iv_LogoLogin"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/Boton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/et_EmailAcceder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_LogoLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="@font/font_titulos"
        android:hint="@string/et_Email"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/tvTitulos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_LogoLogin"
        android:backgroundTint="@color/colorPrimary"/>

    <EditText
        android:id="@+id/et_PasswAcceder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_EmailAcceder"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="@font/font_titulos"
        android:hint="@string/et_Contrasena"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/tvTitulos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_EmailAcceder"
        android:backgroundTint="@color/colorPrimary"/>

    <Button
        android:id="@+id/boton_Acceder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_PasswAcceder"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/font_titulos"
        android:onClick="Acceder"
        android:text="@string/boton_Acceder"
        android:textColor="@color/tvTitulos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_PasswAcceder" />

    <Button
        android:id="@+id/boton_Registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boton_Acceder"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_rounded_border"
        android:fontFamily="@font/font_titulos"
        android:onClick="Registro"
        android:text="@string/boton_Registrar"
        android:textColor="@color/tvTitulos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_Acceder" />

    <ImageButton
        android:id="@+id/boton_GoogLogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_olvidarContrasena"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_toStartOf="@+id/boton_FaceLogin"
        android:background="@drawable/button_no_border"
        android:contentDescription="@string/Boton"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/boton_FaceLogin"
        app:layout_constraintTop_toBottomOf="@+id/boton_Registrar"
        app:srcCompat="@drawable/gboton" />

    <ImageButton
        android:id="@+id/boton_FaceLogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_olvidarContrasena"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_no_border"
        android:contentDescription="@string/Boton"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_Registrar"
        app:srcCompat="@drawable/facebook" />

    <ImageButton
        android:id="@+id/boton_TwitLogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_olvidarContrasena"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@+id/boton_FaceLogin"
        android:background="@drawable/button_no_border"
        android:contentDescription="@string/Boton"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/boton_FaceLogin"
        app:layout_constraintTop_toBottomOf="@+id/boton_Registrar"
        app:srcCompat="@drawable/twitter" />

    <ProgressBar
        android:id="@+id/progressBar_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="132dp"
        android:layout_height="127dp"
        android:layout_below="@+id/iv_LogoLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_olvidarContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boton_Registrar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/font_titulos"
        android:text="@string/tv_olvidoContrasena"
        android:textColor="@color/tvTitulos" />

</RelativeLayout>