<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoActivity"
    tools:context=".EmergenteModAltaDemanda">


    <TextView
        android:id="@+id/tv_ModAltaDemandaEmerg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/font_titulos"
        android:text="@string/tv_ModificarAltaDemanda"
        android:textColor="@color/tvTitulos"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/BotonDecrementarModAD"
        style="@android:style/Widget.DeviceDefault.Light.ImageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_Fecha_ModAD"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:layout_toStartOf="@+id/tv_contador_ModAD"
        android:contentDescription="@string/Boton"
        android:onClick="BotonDecrementar"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/restar"
        android:background="@drawable/button_small"/>

    <ImageButton
        android:id="@+id/BotonIncrementarModAD"
        style="@android:style/Widget.DeviceDefault.Light.ImageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_Fecha_ModAD"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@+id/tv_contador_ModAD"
        android:contentDescription="@string/Boton"
        android:onClick="BotonIncrementar"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/anadir"
        android:background="@drawable/button_small"/>

    <ImageButton
        android:id="@+id/BotonGuardarModAD"
        style="@android:style/Widget.DeviceDefault.Light.ImageButton"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_contador_ModAD"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="23dp"
        android:layout_toStartOf="@+id/tv_contador_ModAD"
        android:contentDescription="@string/Boton"
        android:onClick="BotonGuardarCambio"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotonDecrementarModAD"
        app:srcCompat="@drawable/check"
        android:background="@drawable/button_small"/>

    <ImageButton
        android:id="@+id/BotonEliminarModAD"
        style="@android:style/Widget.DeviceDefault.Light.ImageButton"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_contador_ModAD"
        android:layout_marginStart="23dp"
        android:layout_marginTop="35dp"
        android:layout_toEndOf="@+id/tv_contador_ModAD"
        android:contentDescription="@string/Boton"
        android:onClick="BotonEliminar"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotonIncrementarModAD"
        app:srcCompat="@drawable/cancelar"
        android:background="@drawable/button_small"/>

    <TextView
        android:id="@+id/tv_contador_ModAD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_Fecha_ModAD"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/font_titulos"
        android:text="@string/tv_Contador"
        android:textColor="@color/tvNumeros"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/BotonIncrementarModAD" />

    <TextView
        android:id="@+id/tv_Fecha_ModAD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_ModAltaDemandaEmerg"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/font_titulos"
        android:gravity="center"
        android:text="@string/tv_SeleccioneFecha"
        android:textColor="@color/tvNumeros"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/BotonFechaModAD"
        style="@android:style/Widget.DeviceDefault.Light.ImageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_ModAltaDemandaEmerg"
        android:layout_marginStart="-85dp"
        android:layout_marginTop="34dp"
        android:layout_toEndOf="@+id/tv_Fecha_ModAD"
        android:contentDescription="@string/Boton"
        android:onClick="BotonFecha"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/calendario"
        android:background="@drawable/button_small"/>
</RelativeLayout>